tests/machine/x/ocaml/group_by_left_join.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/group_by_left_join.ml", line 36, characters 8-14:
36 |       ) orders;
             ^^^^^^
Error: This expression has type record2 list
       but an expression was expected of type (string * Obj.t) list list
       Type record2 is not compatible with type (string * Obj.t) list 


Context (around line 36):
  34 |         let cur = try List.assoc key !__groups0 with Not_found -> [] in
  35 |         __groups0 := (key, c :: cur) :: List.remove_assoc key !__groups0);
  36 |       ) orders;
  37 |   ) customers;
  38 |   let __res0 = ref [] in
